[package]
name = "zuora_rest_client"
version = "0.1.0"
authors = ["Peter Bryant <pbryant@peterbryant.me.uk>"]
description = "A HTTP Client built on top of the reqwest package for accessing the Zuora Billing REST API."
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.30"
